--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ksomsurxela.github.io/mesto-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -19,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && scp -r ./build/* ra_moskvitin@51.250.1.192:/home/ra_moskvitin/mesto-frontend"
   },
   "eslintConfig": {
     "extends": [
